--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "test-parser": "mocha test/parser"
   },
   "engines": {
-    "node": "*"
+    "node": ">=12.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
